# theary-coding-challenge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/actions/lint/: action.yml
.github/actions/security-checks/: action.yml
.github/actions/setup/: action.yml
.github/actions/test/: action.yml
.github/workflows/: theary.yml
src/: Dockerfile  manage.py  pyproject.toml
src/api/tree/: apps.py  models.py  serializers.py  urls.py  views.py
src/api/tree/migrations/: 0001_initial.py
src/api/tree/tests/: test_functional.py  test_unit.py
src/scripts/: entrypoint.sh
src/theary/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
