[project]
name = "theary-coding-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adrf>=0.1.9",
    "django>=5.2.1",
    "python-dotenv>=0.9.9",
    "drf-spectacular>=0.28.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-django>=4.11.1",
    "structlog>=25.3.0",
    "uvicorn>=0.34.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "theary.settings"
pythonpath = ["src"]
addopts = "-v --tb=short"
testpaths = ["src"]
